--- a/themes/indigo-plus/source/css/_partial/article.less
+++ b/themes/indigo-plus/source/css/_partial/article.less
@@ -77,7 +77,7 @@
 
   &:before,
   &:after {
-    content: "";
+    content: '';
     position: absolute;
     z-index: 1;
     top: 0;
@@ -194,10 +194,15 @@
   border-top: 1px solid #ddd;
 }
 
+#recommand-post {
+  margin-bottom: 10px;
+}
 .post-content {
   padding-bottom: 20px;
   line-height: 1.8;
-
+  > .recommand-tip {
+    margin-left: 16px;
+  }
   > .highlight,
   > .image-bubble,
   > pre {
@@ -228,7 +233,7 @@
     color: @lightPrimaryColor;
 
     &:before {
-      content: "#";
+      content: '#';
     }
   }
 
