--- a/themes/indigo-plus/layout/_partial/plugins/google-analytics.ejs
+++ b/themes/indigo-plus/layout/_partial/plugins/google-analytics.ejs
@@ -9,4 +9,5 @@
   gtag('config', 'UA-52231954-2');
 </script>
 <!-- End Google Analytics -->
+<script data-ad-client="ca-pub-0801833808148020" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <% } %>
