--- a/themes/indigo-plus/layout/_partial/head.ejs
+++ b/themes/indigo-plus/layout/_partial/head.ejs
@@ -1,4 +1,5 @@
 <head>
+    <link rel="manifest" href="/manifest.json">
     <%- partial('plugins/google-analytics') %>
     <%- partial('plugins/tajs') %>
     <%- partial('plugins/baidu') %>
